# pydf_tool

./: .gitignore  COMPONENTS.md  GUIDA_CODICE.md  ISTRUZIONI.txt  LICENSE  PROJECT_CONTEXT.md  README.md  REFACTORING_PLAN.md  REPORT VIBE CODING.md  pyproject.toml  setup.sh
.github/workflows/: release.yml
.superpowers/brainstorm/96704-1774820099/content/: home-header.html  progress-screen.html  waiting-2.html  wizard-style.html
.superpowers/brainstorm/96704-1774820099/state/: server-stopped
assets/icon/: pydf-tool.icns
docs/superpowers/plans/: 2026-03-30-textual-migration-plan.md
docs/superpowers/specs/: 2026-03-29-textual-migration-design.md
scripts/: build_macos_app.sh  build_macos_launcher.sh  pydf-tool  smoke_test_bundle.sh
src/pdf_tool/: check_ocr.py  cli.py  compress.py  errors.py  ocr.py  progress.py  tui.py  utils.py
src/pydf_tool/: __init__.py  cli.py  compress.py  macos_integration.py  ocr.py  preferences.py  progress.py  system_checks.py  tui.py  tui.tcss  update_check.py  utils.py
tests/: test_cli.py  test_macos_integration.py  test_preferences.py  test_system_checks.py  test_tui_usability.py
