[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydf-tool"
version = "1.0.4"
description = "PyDF Tool: OCR e compressione PDF per macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdf2image==1.17.0",
    "textual>=0.70.0",
    "pypdf==6.8.0",
    "pytesseract==0.3.13",
    "Pillow>=10.3.0,<12.0",
]

[project.scripts]
pydf-tool = "pydf_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
